Extract Grid and make generic